# FIN_Insight_Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.en.md  README.md  README.zh-CN.md  compose.dns-fallback.yaml  compose.runtime.yaml  compose.yaml  pyproject.toml  requirements-workbench.txt  requirements.txt
apps/: __init__.py
configs/: fin_agent_quality_rubric_v0_1.json  foreign_issuer_source_family_canary_v0_2.yaml  foreign_source_family_canary_20f_2025_2026_v0_2.yaml  foreign_source_family_canary_40f_2023_2025_v0_2.yaml  foreign_source_family_canary_6k_2026_v0_2.yaml  industry_data_api_contracts_v0_2.yaml  industry_data_source_families_v0_2.yaml  retrieval.yaml  sec_agent_full_source_demo.env.example  sec_investment_coverage_8k_earnings_full128_us_additions_v0_2.yaml  sec_investment_coverage_8k_earnings_full78_2026_2027.yaml  sec_investment_coverage_full128_us_additions_v0_2.yaml  sec_investment_coverage_full78_fy2023_2027.yaml  sec_tech_10q_full_2026.yaml  sec_tech_8k_earnings_full30_2026_2027.yaml  sec_tech_8k_earnings_pilot_2026_2027.yaml  sec_tech_full30_fy2023_2027.yaml  sec_tech_primary_mixed_pilot.yaml  sec_tech_universe.yaml  sector_depth_full238_us_v0_2_10k_fy2023_2025.yaml  sector_depth_full238_us_v0_2_10q_fy2026_2027.yaml  sector_depth_full238_us_v0_2_8k_earnings_2026_2027.yaml  sector_depth_packs_v0_2.yaml  sources.yaml  vllm_hardware_profiles.json
docs/: README.md
eval_sets/: sec_agent_context_state_replay_eval_v1.json  sec_agent_multiturn_noncontiguous_followup_eval_v1.json  sec_agent_resume_closeout_eval_v1.json  (+15 more)
(+933 files in other folders)
